# rag-bot

./: .env  pyproject.toml
data/chroma_db/de6e7cb1-6770-4736-9665-fe740a6fa391/: index_metadata.pickle
scripts/: fetch_documents.py
src/rag_bot/: config.py  main.py
src/rag_bot/generation/: generator.py
src/rag_bot/gradio_ui/: ui.py
src/rag_bot/indexing/: indexer.py
src/rag_bot/ingestion/: html_loader.py  pdf_loader.py
src/rag_bot/retrieval/: retriever.py  test.py
